--- a/bluetooth_config.json
+++ b/bluetooth_config.json
@@ -5,10 +5,10 @@
   "data_update_interval": 2,
   "connection_timeout": 10,
   "max_connection_attempts": 3,
-  "valid_mac_addresses": [
-    "AA:BB:CC:DD:EE:FF",
-    "11:22:33:44:55:66",
-    "77:88:99:AA:BB:CC",
-    "2A328859-8CB4-994A-F780-440D72EF1A0E"
+  "valid_devices": [
+    {"address": "AA:BB:CC:DD:EE:FF", "name": "Device 1"},
+    {"address": "11:22:33:44:55:66", "name": "Device 2"},
+    {"address": "77:88:99:AA:BB:CC", "name": "Device 3"},
+    {"address": "2A328859-8CB4-994A-F780-440D72EF1A0E", "name": "Device 4"}
   ]
 }
